# FAIR-Data-Python-Package-Template

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
fair_python_package_template/: example_class1.py
tests/: conftest.py  test_example_class1.py
