[tool.poetry]
name = "fair-python-package-template"
version = "0.1.0"
description = ""
authors = ["andrewelamb <andrewelamb@gmail.com>"]
readme = "README.md"
packages = [{include = "fair_python_package_template"}]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pytest-mock = "^3.10.0"
mypy = "1.1.1"
mypy-extensions = "1.0.0"
pylint = "2.17.2"
black = "23.3.0"
coverage = "^7.2.0"